--- a/src/scss/blocks/_courses.scss
+++ b/src/scss/blocks/_courses.scss
@@ -28,6 +28,7 @@
             display: flex;
             justify-content: center;
             gap: 97px;
+            margin-top: 86px;
 
             .card {
                 position: relative;
